tests/baselines/reference/S7.8.5_A2.2_T1.errors.txt
S7.8.5_A2.2_T1.ts(22,2): error TS1161: Unterminated regular expression literal.


==== S7.8.5_A2.2_T1.ts (1 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-RegularExpressionChar
    info: |
      RegularExpressionChar ::
        RegularExpressionNonTerminator but not one of \ or / or [
    
      RegularExpressionNonTerminator ::
        SourceCharacter but not LineTerminator
    
    description: >
      A regular express may not contain a "\" as a SourceCharacter
    
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /a\/
     
!!! error TS1161: Unterminated regular expression literal.
    